--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ before_install:
 - docker build . -t theapp:$(git rev-parse --verify HEAD)
 - docker run --rm -d -p 8001:8001 -t theapp:$(git rev-parse --verify HEAD)
 - docker ps -a
+
+scirpt:
+- echo $TRAVIS_BRANCH
