--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services:
   - docker
 
 before_install:
-- docker build . -t theapp:$(git rev-parse --verify HEAD)
-- docker run --rm -d -p 8001:8001 -t theapp:$(git rev-parse --verify HEAD)
+- docker build . -t theapp:latest
+- docker run --rm -d -p 8001:8001 -t theapp:latest
 - docker ps -a
 
 script:
-- echo hello
-- echo $TRAVIS_BRANCH
+- if [ "$TRAVIS_BRANCH" = "master" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
+  make dockerpush; 
